# NativeStrapper

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  auto-update.json  compile_commands.json  installer.nsi  mkdocs.yml
.github/workflows/: build.yml
assets/: NativeStrapper-full-dark.kra  NativeStrapper-full-light.kra  NativeStrapper.kra  NativeStrapper.rc
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/building/: index.md  linux.md  windows.md
docs/installation/: index.md
docs/scripts/: api.md  index.md  metadata.md
include/: Bootstrapper.hpp  ConfigSaving.hpp  LockFileManager.hpp  Logger.hpp  MainBootstrapper.hpp  NativeStrapper.hpp  NetworkManagement.hpp  ScatterManager.hpp  ShellUtils.hpp  TitleBarDarkMode.hpp  VesselManager.hpp
include/BootstrapScripts/: LuaScript.hpp  ModManager.hpp  NativeStrapperApi.hpp  ScriptManager.hpp  TokenManager.hpp
include/DiscordRPC/: ActivityWatcher.hpp  DiscordRPC.hpp  TailFileWatcher.hpp
include/NativeStrapper/: Installer.hpp
include/URIHandler/: MainURIHandler.hpp  platform_default_handler_windows.cpp
include/UserInterface/: BootstrapWindow.hpp  InstallerWindow.hpp  OnboardingWindow.hpp  ScatterInfoWindow.hpp  SettingsWindow.hpp  VesselInfoWindow.hpp
provided_scatters/: a.md  korone_scatter.json  sober_scatter.json  sober_scatter.lua  testscatter.lua  windows_scatter.json
provided_vessels/: korone_vessel.json  sober_vessel.json  waydroid_example.json
providedscripts/: public-scripts.json
providedscripts/Android/: thing.md
providedscripts/Linux/: bypass.lua  org.vinegarhq.Sober.lua
providedscripts/Windows/: RobloxPlayerBeta.lua
src/: Bootstrapper.cpp  ConfigSaving.cpp  LockFileManager.cpp  Logger.cpp  MainBootstrapper.cpp  NativeStrapper.cpp  NetworkManagement.cpp  ScatterManager.cpp  ShellUtils.cpp  URIHandler.cpp  VesselManager.cpp  main.cpp
src/BootstrapScripts/: LuaScript.cpp  ModManager.cpp  ScriptManager.cpp  TokenManager.cpp
src/DiscordRPC/: ActivityWatcher.cpp  DiscordRPC.cpp  TailFileWatcher.cpp
src/NativeStrapper/: Installer.cpp
src/URIHandler/: AppBundlerGen.hpp  LinuxURIHandler.cpp  MacOSURIHandler.cpp  WindowsURIHandler.cpp
src/URIHandlers/: PlatformDefaultHandler.hpp  platform_default_handler.h  platform_default_handler_mac.mm
src/UserInterface/: BootstrapWindow.cpp  InstallerWindow.cpp  OnboardingWindow.cpp  SettingsWindow.cpp
